--- a/UIService/src/main/resources/templates/admin/users/create.html
+++ b/UIService/src/main/resources/templates/admin/users/create.html
@@ -14,7 +14,7 @@
           th:object="${credentials}">
 
         <div class="form-group">
-            <label for="exampleFormControlSelect1">Аудитория</label>
+            <label for="exampleFormControlSelect1">Роль</label>
             <select class="form-control" id="exampleFormControlSelect1"
                     name="role" data-th-value="${credentials.role}">
                 <option th:value="'ROLE_STUDENT'">Ученик</option>
