--- a/UIService/src/main/resources/templates/admin/users/create.html
+++ b/UIService/src/main/resources/templates/admin/users/create.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="form-group">
-            <label for="exampleFormControlTextareaEmail">Логин</label>
+            <label for="exampleFormControlTextareaEmail">Email</label>
             <textarea class="form-control" id="exampleFormControlTextareaEmail" rows="1"
                       name="email"
                       data-th-text="${credentials.email}"></textarea>
